tests/ui/borrowck/branch-condition-flow-issue-156494.stderr
error[E0381]: used binding `following_token` isn't initialized
  --> $DIR/branch-condition-flow-issue-156494.rs:27:21
   |
LL |     let mut following_token: i32;
   |         ------------------- binding declared here but left uninitialized
...
LL |                     _ => {
   |                     - if this pattern is matched, `following_token` is not initialized
...
LL |             } else {
   |              ------ if the `if` condition is `false` and this `else` arm is executed, `following_token` is not initialized
...
LL |             token = following_token;
   |                     ^^^^^^^^^^^^^^^ `following_token` used here but it isn't initialized
   |
   = note: when checking initialization, the compiler describes possible control-flow paths without evaluating whether branch conditions can actually have the values shown
help: consider assigning a value
   |
LL |     let mut following_token: i32 = 42;
   |                                  ++++

error[E0381]: used binding `y` is possibly-uninitialized
  --> $DIR/branch-condition-flow-issue-156494.rs:54:14
   |
LL |     let y;
   |         - binding declared here but left uninitialized
...
LL |         _ if condition => {}
   |         -------------- if this pattern and condition are matched, `y` is not initialized
...
LL |     let _z = y;
   |              ^ `y` used here but it is possibly-uninitialized
   |
   = note: when checking initialization, the compiler describes possible control-flow paths without evaluating whether branch conditions can actually have the values shown

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0381`.
